# docx-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODING_STANDARDS.md  README.md  STRESS_TEST_REVIEW_2026-03-05.md  universal-retrieval-architecture.html
docs/BIG_UPGRADE_PLAN/: AGENT_HANDOFF_REPORT_PLAN_CARD.md  API_CONTRACT_V2.md  READINESS_CHECK_V1.md  README.md  REPORT_PLAN_CARD_V1.md  WORKFLOW_ALIGNMENT_V1.md
scripts/: seed_data_sources.py  serve.sh  setup.sh  setup_postgres.py  stress_test.sh
src/data_sources/: __init__.py  auth.py  config.py  db.py  embeddings.py  models.py
src/word_agent/: __init__.py  orchestrator.py
src/word_engine/: __init__.py  config.py  errors.py  locking.py  models.py  responses.py  service.py
src/word_mcp_server/: __init__.py  server.py
src/word_store/: __init__.py  artifacts_repo.py  data_sources_repo.py  db.py  events_repo.py  knowledge_repo.py  messages_repo.py  migrate.py  sessions_repo.py
src/word_ui/: __init__.py  models.py  preview.py  retrievers.py  web_server.py  workspace.py  workspace_v2.py
tests/e2e/: __init__.py  test_agent_workflow.py  test_ui_workspace_flow.py
tests/fixtures/: README.md
tests/unit/: conftest.py  helpers.py  test_contract_and_read.py  test_contract_shapes.py  test_edit_primitives.py  test_openai_integration.py  test_phase5_hardening.py  test_phase6_comments_footnotes.py  test_phase6_pdf_export.py  test_replace_section.py  test_retrievers_registry.py  test_stress_test_report.py  test_stress_test_runner.py  (+12 more)
(+29 files in other folders)
